--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,42 +1,78 @@
 body{
     position: relative;
+    background-image: url(../../leaves-pattern.png);
 }
 header{
-    height: 100px;
+    height: 80px;
     width: 100%;
+    background: #ffffff;
+    border-bottom: 5px solid #cccccc;
+    padding-left: 24%;
+    padding-right: 25%;
+    margin-bottom: 15px;
 }
 h1{
-    display: inline;
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #ffffff;
+    float: left;
+    text-align: center;
+    padding: 25px;
+    background: #4aaaa5;
+    width: 250px;
+    height: 30px;
+    margin-right: 24%;
+}
+h2{
+    width: 90%;
+    font-size: 30px;
+    color: #4aaaa5;
+    padding: 10px;
+    padding-left: 25px;
+    border-bottom:2.5px solid #cccccc;
+    margin-bottom: 5px;
 }
 ul{
-    float: right;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 25px;
+    color: #777777;
     line-height: 20px;
 }
 li{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 10px;
     display: inline;
 }
 .container{
+    background: #ffffff;
+    border: 1px solid #cccccc;
     width: 960px;
-    height: 960px;
+    height: 550px;
     padding: 20px;
     margin: 0 auto;
 }
 footer{
+    border-top: 5px solid #4aaaa5;
     text-align: center;
     height: 50px;
     width: 100%;
-    border-top: 10px;
-    border-top-color: #4aaaa5;
     background: #666666;
     position: fixed;
     bottom: 0;
+    color: white;
+    font-size: 12px;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .profile-picture{
     display: inline;
 }
-h2{
-    display: inline;
-}
 p{
     display: inline;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 35px;
+    color: #777777;
+    width: 745px;
 }
