--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ h1{
     margin-right: 24%;
 }
 h2{
+    margin-left: 30px;
     width: 90%;
     font-size: 30px;
     color: #4aaaa5;
@@ -75,4 +76,25 @@ p{
     line-height: 35px;
     color: #777777;
     width: 745px;
+}
+.inner-form{
+    margin: 34px;
+}
+input{
+    width: 100%;
+}
+#textbox{
+    width: 100%;
+    height: 250px;
+}
+.button{
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: center;
+    padding: 20px;
+    margin-top: 5px;
+    background: #4aaaa5;
+    width: 100px;
+    border: 1px solid #cccccc;
 }
