--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ li{
     background: #ffffff;
     border: 1px solid #cccccc;
     width: 960px;
-    height: 550px;
+    /* height: 550px; */
     padding: 20px;
     margin: 0 auto;
 }
@@ -66,8 +66,8 @@ footer{
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
-.profile-picture{
-    display: inline;
+#profile-picture{
+    float: left;
 }
 p{
     display: inline;
@@ -98,3 +98,29 @@ input{
     width: 100px;
     border: 1px solid #cccccc;
 }
+.row{
+    height: 215px;
+    margin-left: 50px;
+    width: 50%;
+}
+.float-left-container{
+    float: left;  
+}
+.float-right-container{
+    float: right;
+}
+.portfolio-photo{
+    position: absolute;
+}
+h3{
+    padding: 5px;
+    font-size: 20px;
+    top: 150px;
+    background: #4aaaa5;
+    color: #ffffff;
+    width: 190px;
+    text-align: center;
+    z-index: 1;
+    position: relative;
+}
+
