--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,16 @@
-body{
+body {
     position: relative;
-    background-image: url(../../leaves-pattern.png);
+    background-image: url(../images/leaves-pattern.png);
 }
-header{
+
+li a {
+    text-decoration: none;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #777777;
+}
+
+header {
     height: 80px;
     width: 100%;
     background: #ffffff;
@@ -11,7 +19,8 @@ header{
     padding-right: 25%;
     margin-bottom: 15px;
 }
-h1{
+
+h1 {
     font-size: 30px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #ffffff;
@@ -23,29 +32,34 @@ h1{
     height: 30px;
     margin-right: 24%;
 }
-h2{
+
+h2 {
+    font-weight: bold;
     margin-left: 30px;
     width: 90%;
     font-size: 30px;
     color: #4aaaa5;
     padding: 10px;
     padding-left: 25px;
-    border-bottom:2.5px solid #cccccc;
+    border-bottom: 2.5px solid #cccccc;
     margin-bottom: 5px;
 }
-ul{
+
+ul {
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 25px;
     color: #777777;
     line-height: 20px;
 }
-li{
+
+li {
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 10px;
     display: inline;
 }
-.container{
+
+.container {
     background: #ffffff;
     border: 1px solid #cccccc;
     width: 960px;
@@ -53,7 +67,8 @@ li{
     padding: 20px;
     margin: 0 auto;
 }
-footer{
+
+footer {
     border-top: 5px solid #4aaaa5;
     text-align: center;
     height: 50px;
@@ -66,10 +81,12 @@ footer{
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
-#profile-picture{
+
+#profile-picture {
     float: left;
 }
-p{
+
+p {
     display: inline;
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
@@ -77,17 +94,21 @@ p{
     color: #777777;
     width: 745px;
 }
-.inner-form{
+
+.inner-form {
     margin: 34px;
 }
-input{
+
+input {
     width: 100%;
 }
-#textbox{
+
+#textbox {
     width: 100%;
     height: 250px;
 }
-.button{
+
+.button {
     color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
@@ -98,21 +119,26 @@ input{
     width: 100px;
     border: 1px solid #cccccc;
 }
-.row{
+
+.row {
     height: 215px;
     margin-left: 50px;
     width: 50%;
 }
-.float-left-container{
-    float: left;  
+
+.float-left-container {
+    float: left;
 }
-.float-right-container{
+
+.float-right-container {
     float: right;
 }
-.portfolio-photo{
+
+.portfolio-photo {
     position: absolute;
 }
-h3{
+
+h3 {
     padding: 5px;
     font-size: 20px;
     top: 150px;
@@ -123,4 +149,3 @@ h3{
     z-index: 1;
     position: relative;
 }
-
